# precall-voice-assistant

./: .gitignore  SKILL_PR.md  business_rules.py  graph-extraction-flow.html
demo/: .gitignore  CLAUDE.md  Makefile  README.md  pyproject.toml
demo/demo/: ui_api.py
demo/demo/db/: cli.py  client.py  server.py
demo/demoui/: README.md  index.html  package-lock.json  package.json  vite.config.ts
demo/demoui/src/: App.tsx  index.css
demo/protos/: db.proto
demo/runbook/: generate_sqlite_schema.md
demo/scripts/: csv_to_snowflake.py  manifest.py  openai_extract_doc.py  po_csvs_to_sqlite.py
demo/snowflake/: Makefile  README.md  extract.sql  extract_golden_invoices.sh  init.sql  init_db.sh  shell.sh  snow.env  snow.sh  sql_file.sh  sql_query.sh  upload_golden_invoices.sh
demo/snowflake/helpers/: connect_shell.sh  snow.sh  sql_file.sh  sql_query.sh
demo/snowflake/sql/: dump_invoices.sql  init.sql  init_account.sql
demo/sql/: init.sql
demo/test_data/: .gitignore  Makefile  README.md  golden_invoices.manifest  golden_purchase_orders.manifest
demo/test_data/snowflake_invoices_golden/: README.md
demo/ui/: package-lock.json  package.json
demo/ui/src/: App.tsx  Mermaid.tsx
inviq/collector/: .gitignore  CLAUDE.md  Dockerfile  Makefile  README.md  pyproject.toml  test_upload.sh
inviq/collector/app/: logging.py  main.py
inviq/collector/test_files/: invoice1.txt  invoice2.txt
inviq/collector/tests/: test_main.py
inviq/extractor/: .dockerignore  .gitignore  CLAUDE.md  Dockerfile  Makefile  pyproject.toml  run_dev.py
inviq/extractor/app/: main.py  test_client.py
inviq/extractor/snowflake/: extract_invoice_file_def.sql  extract_invoice_file_test.sql
inviq/filestore/: .dockerignore  .gitignore  CLAUDE.md  Dockerfile  Makefile  pyproject.toml
inviq/filestore/app/: db.py  main.py
inviq/gateway/: Dockerfile  Makefile  pyproject.toml
inviq/invoicestore/: .gitignore  CLAUDE.md  Dockerfile  Makefile  pyproject.toml
inviq/larry/: .gitignore  Makefile  langgraph.json  larry.py  pyproject.toml
inviq/py-protos/: .gitignore  Makefile  pyproject.toml
inviq/py-util/: Makefile  pyproject.toml
invoiceiq/backend/: DEPLOY_BE.md  Dockerfile  Makefile  README.md  pyproject.toml  service_spec.yml
invoiceiq/collector/: .env.example  .gitignore  CLAUDE.md  Dockerfile  Makefile  README.md  pyproject.toml  service_spec.yml  test_upload.sh
invoiceiq/langgraph_workflow/: Dockerfile  Makefile  README.md  pyproject.toml
knowledge-builder/: .env.example  .gitignore  .sqlfluff  .sqlfluffignore  AGENTS.md  Cargo.toml  README.md  config.py  environment.yml  justfile  pyproject.toml  schemachange-config.yml  snowflake.yml  streamlit_app.py
knowledge-builder/.cortex/: SKILL.md
knowledge-builder/app/: config.py  data_operations.py  eda.py  evaluation.py  seeding.py  streamlit_app.py  taxonomy.py  ui_components.py  ui_utils.py
knowledge-builder/data/: kb_knowledge.csv  synthetic_pairs.csv
knowledge-builder/docker/: Dockerfile.example_job  Dockerfile.kb_builder_svc
knowledge-builder/notebooks/: KNOWLEDGE_BUILDER_SETUP.ipynb  README.md
knowledge-builder/release/: 1_database_schema.sql  3_compute_pool.sql  5_example_job.sql  6_service_functions.sql  7_optional_html_utils.sql  8_notebook.ipynb  9_analyze_image_links_sproc.sql  Dockerfile.example_job  Dockerfile.kb_builder_svc
knowledge-builder/src/: eda_app.py  full_demo.py  html_utils.py  kb_builder_svc.py
knowledge-builder/taxonomy_app/: components.py  config.py  data.py  store.py  streamlit_app.py  styles.css
sales-ai-platform/: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  README.md  app.py  justfile  langgraph.json  pyproject.toml  test_api_route_arithmetic.py  test_api_route_post_meeting.py  test_arithmetic.py  test_graph_functionality.py  test_post_meeting.py  test_run_workflow.py  utils.py
sales-ai-platform/dashboard/: Dockerfile  dashboard.py  entrypoint.sh  requirements.txt
sales-ai-platform/evals/: __init__.py  langsmith_evals.py  prod_logging.py
sales-ai-platform/graphs/: __init__.py  arithmetic_agent.py  graph_utils.py  greeting_workflow.py  langsmith_evals.py  post_meeting_workflow.py  prompts.py  testing.py
sales-ai-platform/local_langsmith/: docker-compose.yaml
sales-ai-platform/release/: 0_fake_all_engagement_details.sql  1_database_schema.sql  2_network_rules.sql  3_compute_pool.sql  4_service.sql  5_functions.sql  6_task_stream.sql  7_fake_all_engagement_details.sql  8_potential_use_case_table.sql  9_logging_eval_table.sql  dashboard_service.sql  function.sql  network_rules.sql  service_spec.yaml  snowflake.yml  sprocs.sql
support-data-agent/: .gitignore  CONTRIBUTING.md  PHOENIX_TRACING_TODO.md  README.md  app.py  docker-compose.yml  env.example  page.py  pyproject.toml  voice_of_customer_analysis.ipynb
support-data-agent/360app/: README.md  docker-compose.yml  env.example  run-with-theme.sh
support-data-agent/agentsim/: .env.example  IMPLEMENTATION_SUMMARY.md  LLM_JUDGES_IMPLEMENTATION.md  README.md  README_CORTEX_TESTING.md  cortex_wrapper_agent.py  docker-compose.yml  pyproject.toml  test_cortex_e2e.py
support-data-agent/agentsmith/: .env.example  .gitignore  README.md  SNOWFLAKE_SETUP.md  agentsmith.db.backup  check_agent_traces.py  cortex_wrapper_agent.py  docker-compose.yml  pyproject.toml  pytest.ini  test_conversation_loader.py
support-data-agent/backend/: Dockerfile  env.example  pyproject.toml
support-data-agent/dda_service/: .dockerignore  .env.example  .gitignore  README.md  docker-compose.yml  pyproject.toml
support-data-agent/docs/: backend-prd.md  frontend-prd.md  mvp-backend-plan.md
support-data-agent/frontend/: env.example  eslint.config.mjs  next.config.js  package-lock.json  package.json  tailwind.config.ts
support-data-agent/troubleshooting/: .env.example  Dockerfile  README.md  README_SERVICES.md  docker-compose.mcp-only.yml  docker-compose.yml  pyproject.toml  start_services.py  start_services.sh  test_cortex_search.py
support-data-agent/webagent/: .gitignore  README.md  docker-compose.yml  otel-collector-config.yaml
(+1657 files in other folders)
