[tool.poetry]
name = "demo"
version = "0.0.1"
description = ""
authors = ["Seth Li <seth.li@snowflake.com>"]
readme = "README.md"

[tool.poetry.scripts]
db = 'demo.db.cli:app'

[tool.poetry.dependencies]
python = "^3.10"
typer = "^0.16.1"
grpcio = "^1.74.0"
grpcio-tools = "^1.74.0"
fastapi = {extras = ["standard"], version = "^0.116.1"}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

