[package]
name = "example-job"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "example-job"
path = "src/example_job/main.rs"

[dependencies]
reqwest = { version = "0.11", features = ["json", "blocking"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
anyhow = "1.0"
governor = "0.6"
nonzero_ext = "0.3"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
