[project]
name = "knowledge-builder"
version = "0.1.0"
description = "Knowledge Builder Service"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "fastapi>=0.121.2",
    "httpx>=0.28.1",
    "pydantic>=2.12.4",
    "python-dotenv>=1.2.1",
    "ruff>=0.14.5",
    "uvicorn>=0.38.0",
]
