[project]
name = "knowledge-builder"
version = "0.1.0"
description = "Knowledge Builder Service"
readme = "README.md"
requires-python = "==3.13.9"
dependencies = [
    "fastapi>=0.121.2",
    "httpx>=0.28.1",
    "langchain-text-splitters>=1.0.0",
    "pandas>=2.3.3",
    "pyarrow>=22.0.0",
    "pydantic>=2.12.4",
    "python-dotenv>=1.2.1",
    "snowflake-snowpark-python>=1.42.0",
    "uvicorn>=0.38.0",
]

[dependency-groups]
dev = [
    "jupyter>=1.1.1",
    "ruff>=0.14.5",
]
