[project]
name = "knowledge-builder"
version = "0.1.0"
description = "Knowledge Builder Service"
readme = "README.md"
requires-python = "==3.13.9"
dependencies = [
    "fastapi>=0.121.2",
    "httpx>=0.28.1",
    "langchain-text-splitters>=1.0.0",
    "pandas>=2.3.3",
    "pyarrow>=22.0.0",
    "pydantic>=2.12.4",
    "python-dotenv>=1.2.1",
    "schemachange>=4.1.0",
    "snowflake-snowpark-python>=1.42.0",
    "uvicorn>=0.38.0",
]

[dependency-groups]
dev = [
    "jupyter>=1.1.1",
    "ruff>=0.14.5",
]
eda = [
    "streamlit>=1.28.0",
    "altair>=5.0.0",
    "ydata-profiling>=4.6.0",
    "trulens>=2.5.2",
    "trulens-providers-cortex>=2.5.2",
]

[tool.ruff]
target-version = "py311"
line-length = 320

[tool.ruff.lint]
select = [
     "E",  # pycodestyle errors
     "W",  # pycodestyle warnings
     "F",  # pyflakes
     "I",  # isort
     "B",  # flake8-bugbear
     "C4", # flake8-comprehensions
     "UP", # pyupgrade
]
ignore = []

[tool.ruff.lint.per-file-ignores]
"apps/feedback_app/*.py" = ["E402"]
"apps/taxonomy_app/*.py" = ["E402"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
