[project]
name = "sales-ai-platform"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "dbos>=2.3.0",
    "fastapi>=0.119.1",
    "httpx>=0.28.1",
    "langchain-community>=0.4",
    "langchain-core>=1.0.0",
    "langchain-openai>=1.0.1",
    "langgraph>=1.0.1",
    "langgraph-checkpoint-sqlite>=3.0.0",
    "langgraph-cli[inmem]>=0.4.4",
    "langgraph-prebuilt>=1.0.1",
    "langgraph-sdk>=0.2.9",
    "langsmith>=0.4.37",
    "notebook>=7.4.7",
    "pydantic>=2.12.3",
    "requests>=2.32.5",
    "ruff>=0.14.2",
    "snowflake-connector-python>=4.0.0",
    "snowflake-snowpark-python>=1.42.0",
    "trustcall>=0.0.39",
    "uvicorn>=0.32.1",
]
