[project]
name = "sales-ai-platform"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "dbos[otel]>=2.3.0",
    "dotenv>=0.9.9",
    "fastapi>=0.119.1",
    "httpx>=0.28.1",
    "langchain-community>=0.4",
    "langchain-core>=1.0.0",
    "langchain-openai>=1.0.1",
    "langgraph>=1.0.1",
    "langgraph-checkpoint-sqlite>=3.0.0",
    "langgraph-cli[inmem]>=0.4.4",
    "langgraph-prebuilt>=1.0.1",
    "langgraph-sdk>=0.2.9",
    "langsmith[otel]>=0.4.37",
    "notebook>=7.4.7",
    "pydantic>=2.12.3",
    "requests>=2.32.5",
    "ruff>=0.14.3",
    "snowflake-connector-python>=4.0.0",
    "snowflake-snowpark-python>=1.42.0",
    "trustcall>=0.0.39",
    "uvicorn>=0.32.1",
    "streamlit>=1.36.0",
]

[tool.ruff]
line-length = 320
indent-width = 4
target-version = "py311"

[tool.ruff.lint]
select = [
     "E",  # pycodestyle errors
     "W",  # pycodestyle warnings
     "F",  # pyflakes
     "I",  # isort
     "B",  # flake8-bugbear
     "C4", # flake8-comprehensions
     "UP", # pyupgrade
]
ignore = []
fixable = ["ALL"]
unfixable = []
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
docstring-code-format = false
docstring-code-line-length = "dynamic"
