[project]
name = "support-data-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11,<3.12"
dependencies = [
    "python-dotenv>=1.1.1",
    "snowflake-connector-python>=3.17.0,<4.0.0",
    "snowflake-snowpark-python>=1.40.0",
    "streamlit>=1.50.0",
]
