[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[project]
name = "collector"
version = "0.1.0"
description = "Ingress service to process invoice tickets"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "pydantic>=2.4.0",
    "python-multipart>=0.0.20",
    "httpx>=0.25.0",
    "py-protos", # local dependency
    "loguru>=0.7.3",
]

[dependency-groups]
dev = [
    "ruff>=0.13.1",
    "pyright>=1.1.0",
    "pytest>=7.4.0",
    "httpx>=0.25.0",
]

[tool.uv.sources]
py_protos = { path="../py-protos", editable=true }

[tool.ruff]
target-version = "py312"
line-length = 120

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]
ignore = []

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.pyright]
pythonVersion = "3.12"
typeCheckingMode = "basic"
reportMissingImports = true
reportMissingTypeStubs = false
