[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[project]
name = "extractor"
version = "0.1.0"
description = "gRPC file upload service"
requires-python = ">=3.12"
dependencies = [
    "grpcio>=1.60.0",
    "grpcio-tools>=1.60.0",
    "loguru>=0.7.3",
    "protobuf>=4.25.0",
    "py-protos", # local dependency
    "py-util", # local dependency
    "python-dotenv>=1.1.1",
    "snowflake-connector-python>=3.17.4",
    "snowflake-ml-python>=1.15.0",
    "watchdog>=6.0.0",
]

[dependency-groups]
dev = [
    "ruff>=0.13.1",
    "pyright>=1.1.0",
]

[tool.uv.sources]
py_protos = { path="../py-protos", editable=true }
py_util = { path="../py-util", editable=true }

[tool.ruff]
target-version = "py312"
line-length = 120

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]
ignore = []

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.pyright]
pythonVersion = "3.12"
typeCheckingMode = "basic"
reportMissingImports = true
reportMissingTypeStubs = false
include = ["app", "tests"]
