[project]
name = "gateway"
version = "0.1.0"
description = "A REST-to-gRPC gateway for the InvoiceIQ services."
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "pydantic>=2.4.0",
    "python-multipart>=0.0.6",  # Required for file uploads
    "py-protos", # Local dependency for gRPC stubs
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[dependency-groups]
dev = [
    "ruff>=0.13.1",
    "pyright>=1.1.0",
]

[tool.uv.sources]
py_protos = { path = "../py-protos", editable = true }
