[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[project]
name = "invoicestore"
version = "0.1.0"
description = "gRPC service: persist and manage invoice data"
requires-python = ">=3.12"
dependencies = [
    "grpcio>=1.60.0",
    "grpcio-tools>=1.60.0",
    "protobuf>=4.25.0",
    "py-protos", # local dependency
]

[dependency-groups]
dev = [
    "ruff>=0.13.1",
    "pyright>=1.1.0",
    "pytest>=7.4.0",
    "pytest-asyncio>=0.23.0",
]

[tool.uv.sources]
py_protos = { path="../py-protos", editable=true }

[tool.ruff]
target-version = "py312"
line-length = 120

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]
ignore = []

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.pyright]
pythonVersion = "3.12"
typeCheckingMode = "basic"
reportMissingImports = true
reportMissingTypeStubs = false
include = ["app"]
