[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[project]
name = "Larry"
version = "0.1.0"
description = "Langgraph Agent Larry"
requires-python = ">=3.12"
dependencies = [
    "grpcio>=1.60.0",
    "grpcio-tools>=1.60.0",
    "langchain-community>=0.3.30",
    "langchain-core>=0.3.78",
    "langchain-openai>=0.3.34",
    "langgraph>=0.6.8",
    "langgraph-api>=0.4.35",
    "langgraph-checkpoint-sqlite>=2.0.11",
    "langgraph-cli[inmem]>=0.4.2",
    "langgraph-prebuilt>=0.6.4",
    "langgraph-sdk>=0.2.9",
    "langsmith>=0.4.32",
    "loguru>=0.7.3",
    "protobuf>=4.25.0",
    "py-protos", # local dependency
    "py-util", # local dependency
    "pdfplumber>=0.11.0",
    "pydantic>=2.0.0",
    "dotenv>=0.9.9",
]

[dependency-groups]
dev = [
    "ruff>=0.13.1",
    "pyright>=1.1.0",
    "pytest>=7.4.0",
    "pytest-asyncio>=0.23.0",
]

[tool.uv.sources]
py_protos = { path="../py-protos", editable=true }
py_util = { path="../py-util", editable=true }

[tool.ruff]
target-version = "py312"
line-length = 120

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]
ignore = []

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.pyright]
pythonVersion = "3.12"
typeCheckingMode = "basic"
reportMissingImports = true
reportMissingTypeStubs = false
include = ["app"]
