[project]
name = "py-protos"
version = "0.1.0"
description = "Generated python code from inviq protobuf schemas"
readme = "README.md"
authors = [
    { name = "Seth Li", email = "seth.li@snowflake.com" }
]
requires-python = ">=3.12"
dependencies = [
    "grpcio-tools>=1.75.0",
]

[build-system]
requires = ["uv_build>=0.8.17,<0.9.0"]
build-backend = "uv_build"
