[project]
name = "invoiceiq-backend"
version = "1.0.0"
description = "InvoiceIQ Backend API Service"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "snowflake-connector-python>=3.12.0",
    "pydantic>=2.9.0",
    "python-multipart>=0.0.9",
    "python-dotenv>=1.0.0",
]

[dependency-groups]
dev = [
    "pytest>=8.3.3",
    "httpx>=0.27.2",
    "ruff>=0.8.0",
    "pyright>=1.1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.pyright]
typeCheckingMode = "basic"
reportOptionalSubscript = "none"
reportAttributeAccessIssue = "none"
reportCallIssue = "none"
reportArgumentType = "none"
reportPossiblyUnboundVariable = "none"


