[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[project]
name = "langgraph-workflow"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.118.0",
    "langchain-openai>=0.3.35",
    "langgraph-cli[inmem]>=0.4.3",
    "langgraph>=0.6.8",
    "python-dotenv>=1.1.1",
    "snowflake-connector-python>=3.18.0",
    "uvicorn>=0.37.0",
    "openevals>=0.1.2",
    "pymupdf>=1.24.0",
    "requests>=2.31.0",
    "pytesseract>=0.3.10",
    "pillow>=10.0.0",
    "pdf2image>=1.16.3",
    "python-dateutil>=2.8.2",
]
