[project]
name = "agentsmith"
version = "0.1.0"
description = "Chatbot conversation analysis and optimization tool"
readme = "README.md"
authors = [
    { name = "Alejandro Herrera", email = "149527975+sfc-gh-alherrera@users.noreply.github.com" }
]
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "sqlalchemy>=2.0.35",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.6.0",
    "httpx>=0.27.0",
    "openai>=1.52.0",
    "anthropic>=0.39.0",
    "python-multipart>=0.0.12",
    "alembic>=1.13.0",
    "snowflake-snowpark-python>=1.42.0",
    "snowflake-sqlalchemy>=1.5.0",
    "pydantic-ai>=0.0.14",
    "requests>=2.31.0",
    "python-dotenv>=1.0.0",
    "fastmcp>=0.1.0",
    "claude-agent-sdk>=0.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0.0",
    "pytest-mock>=3.14.0",
    "faker>=30.8.0",
    "ruff>=0.7.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["backend"]

[dependency-groups]
dev = [
    "faker>=37.12.0",
    "pytest>=8.4.2",
    "pytest-asyncio>=1.2.0",
    "pytest-cov>=7.0.0",
    "pytest-mock>=3.15.1",
    "ruff>=0.14.3",
]
