[project]
name = "backend"
version = "0.1.0"
description = "Backend for Support Data Agent."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.119.0",
    "uvicorn>=0.30.0",
    "pandas>=2.0.0",
    "snowflake-snowpark-python>=1.16.0",
    "pydantic-settings>=2.0.0",
    "structlog>=24.1.0",
]

[project.scripts]
initialize-schema = "app.initialize_schema:main"
dev-server = "app.dev_server:main"
server = "app.server:main"

[tool.uv]
package = true

[tool.setuptools]
packages = ["app"]

[dependency-groups]
dev = [
    "ruff>=0.13.1",
    "pytest>=8.0.0",
    "sqlglot>=27.28.1",
]

notebook = [
    "jupyter>=1.1.1,<2",
]

[tool.ruff]
target-version = "py311"
line-length = 120

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]
ignore = []

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
