[project]
name = "cortex-cache-experiments"
version = "0.1.0"
description = "Caching experiments for LangGraph agents with Cortex LLM, Agent, and Analyst APIs"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "langchain-openai>=1.0.3",
    "langgraph>=1.0.3",
    "trulens-apps-langgraph>=2.5.0",
    "trulens>=2.5.0",
    "trulens-connectors-snowflake>=2.5.0",
    "trulens-providers-cortex>=2.5.0",
    "snowflake-snowpark-python>=1.42.0",
    "snowflake-telemetry-python>=0.7.1",
    "opentelemetry-exporter-otlp-proto-grpc>=1.20.0",
    "httpx>=0.27.0",
    "pyyaml>=6.0",
    "pandas>=2.0.0",
    "python-dotenv>=1.0.0",
]
