[project]
name = "agent-os-demo"
version = "0.1.0"
description = "Agent OS Demo - A demonstration project for agent-based systems"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic>=2.9.0",
    "python-dotenv>=1.0.0",
    "pandas>=2.1,<2.3",
    "snowflake-connector-python>=4.0.0",
    "snowflake-snowpark-python>=1.42.0",
    "openai==2.14.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "ruff>=0.7.0",
]

[tool.ruff]
line-length = 100
target-version = "py311"
fix = true

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
ignore = ["E501"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.uv]
dev-dependencies = [
    "pytest>=8.0.0",
    "ruff>=0.7.0",
]

