[project]
name = "semantic-forge"
version = "0.1.0"
description = "Semantic View bootstrapping platform for Snowflake AI Agent engagements"
requires-python = ">=3.11"
dependencies = [
    "streamlit>=1.38.0",
    "streamlit-flow-component>=1.6.0",
    "snowflake-snowpark-python>=1.20.0",
    "PyYAML>=6.0",
    "openpyxl>=3.0.0",
    "pandas>=2.1,<2.3",
    "requests>=2.31.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "ruff>=0.7.0",
]

[tool.ruff]
line-length = 100
target-version = "py311"
fix = true

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
ignore = ["E501"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.uv]
dev-dependencies = [
    "pytest>=8.0.0",
    "ruff>=0.7.0",
]
