[project]
name = "document-extractor"
version = "0.1.0"
description = "Extract structured data from documents using BAML"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "baml-py>=0.218.1",
    "pydantic>=2.12.5",
    "rich",
    "typing-extensions>=4.15.0",
]

[project.scripts]
document-extractor = "document_extractor:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["document_extractor"]