[project]
name = "document-parser"
version = "1.0.0"
description = "Standalone document content parsing with OCR and bounding boxes"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    # PDF Processing
    "PyMuPDF>=1.24.0",
    "pdf2image>=1.17.0",
    
    # OCR
    "pytesseract>=0.3.10",
    "pillow>=10.0.0",
    
    # Image processing
    "opencv-python>=4.9.0",
    "numpy>=1.26.0",
    
    # Data validation
    "pydantic>=2.0.0",
    
    # CLI
    "rich>=13.0.0",
]

[project.scripts]
document-parser = "document_parser:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["document_parser"]

[tool.uv]
dev-dependencies = [
    "pytest>=8.0.0",
]
