[project]
name = "pattern-iq"
version = "0.2.0"
description = "Extract, distill, and discover reusable interaction patterns across repositories"
requires-python = ">=3.10"
dependencies = [
    "pyyaml>=6.0",
    "snowflake-connector-python>=3.0",
]

[tool.uv]
dev-dependencies = [
    "pytest>=8.0",
    "ruff>=0.4",
]
